# circrl

./: .gitignore  README.md  README.py  demo.ipynb  demo.py  pyproject.toml  pytest.ini  release.sh  requirements_demo.txt
src/circrl/: hooks.py  module_hook.py  probing.py  rollouts.py
tests/: test_hooks.py  test_probing.py  test_rollouts.py
