[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circrl"
version = "0.1.0"
authors = [
  { name="montemac", email="m.macdiarmid@gmail.com" },
]
description = "Tools for applying circuits-style interpretability techniques to RL agents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.24.1',
  'torch >= 1.13.1',
  'pandas >= 1.5.2',
  'xarray >= 2022.12.0',
  'einops >= 0.6.0',
  'bidict >= 0.22.1',
  'moviepy >= 1.0.3',
  'gym >= 0.21.0',
  'tqdm >= 4.64.1',
  'blosc >= 1.11.1',
  'scikit-learn >= 1.2.1'
]

[project.urls]
"Homepage" = "https://github.com/montemac/circrl"

